--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10310,6 +10310,11 @@ select{
   margin-bottom: auto;
 }
 
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-1{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -10447,6 +10452,30 @@ select{
   margin-top: -2.5rem;
 }
 
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mr-5{
+  margin-right: 1.25rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
+.mt-0{
+  margin-top: 0px;
+}
+
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
 .-ml-\[13rem\]{
   margin-left: -13rem;
 }
@@ -10555,6 +10584,10 @@ select{
   height: 30rem;
 }
 
+.h-14{
+  height: 3.5rem;
+}
+
 .h-40{
   height: 10rem;
 }
@@ -10651,6 +10684,10 @@ select{
   width: 10rem;
 }
 
+.w-14{
+  width: 3.5rem;
+}
+
 .w-2\/3{
   width: 66.666667%;
 }
@@ -10697,6 +10734,10 @@ select{
 
 .shrink-0{
   flex-shrink: 0;
+}
+
+.table-auto{
+  table-layout: auto;
 }
 
 .origin-top-left{
@@ -10779,12 +10820,12 @@ select{
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-5{
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -11035,6 +11076,16 @@ select{
   border-color: rgb(203 213 225 / 0.6);
 }
 
+.border-gray-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.border-red-800{
+  --tw-border-opacity: 1;
+  border-color: rgb(153 27 27 / var(--tw-border-opacity));
+}
+
 .border-gray-400{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
@@ -11154,6 +11205,11 @@ select{
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
+.bg-red-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
 .bg-amber-600{
   --tw-bg-opacity: 1;
   background-color: rgb(217 119 6 / var(--tw-bg-opacity));
@@ -11220,6 +11276,10 @@ select{
 
 .p-0{
   padding: 0px;
+}
+
+.p-5{
+  padding: 1.25rem;
 }
 
 .px-4{
@@ -11307,6 +11367,11 @@ select{
   padding-right: 1.25rem;
 }
 
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .pt-6{
   padding-top: 1.5rem;
 }
@@ -11365,6 +11430,10 @@ select{
 
 .pt-3{
   padding-top: 0.75rem;
+}
+
+.pr-5{
+  padding-right: 1.25rem;
 }
 
 .pl-2{
@@ -11656,6 +11725,16 @@ select{
   color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
+.text-red-900{
+  --tw-text-opacity: 1;
+  color: rgb(127 29 29 / var(--tw-text-opacity));
+}
+
+.text-slate-600{
+  --tw-text-opacity: 1;
+  color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+
 .text-slate-400{
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
@@ -11664,11 +11743,6 @@ select{
 .text-yellow-900{
   --tw-text-opacity: 1;
   color: rgb(113 63 18 / var(--tw-text-opacity));
-}
-
-.text-slate-600{
-  --tw-text-opacity: 1;
-  color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
 .text-gray-200{
@@ -12124,6 +12198,16 @@ select{
   background-color: rgb(217 119 6 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-red-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-slate-300:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
@@ -12352,13 +12436,21 @@ select{
     --tw-border-opacity: 1;
     border-color: rgb(55 65 81 / var(--tw-border-opacity));
   }
-  .dark\:bg-gray-900{
+  .dark\:bg-gray-700{
     --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
   }
   .dark\:bg-gray-800{
     --tw-bg-opacity: 1;
     background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+  .dark\:bg-gray-900{
+    --tw-bg-opacity: 1;
+    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  }
+  .dark\:text-gray-400{
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
   }
   .dark\:text-slate-400{
     --tw-text-opacity: 1;
@@ -12372,9 +12464,9 @@ select{
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
-  .dark\:text-gray-400{
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity));
+  .dark\:hover\:bg-gray-600:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
   }
 }
 
@@ -12588,6 +12680,9 @@ select{
   .md\:ml-5{
     margin-left: 1.25rem;
   }
+  .md\:ml-10{
+    margin-left: 2.5rem;
+  }
   .md\:mb-6{
     margin-bottom: 1.5rem;
   }
@@ -12652,8 +12747,15 @@ select{
   .md\:border-l{
     border-left-width: 1px;
   }
+  .md\:px-2{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
   .md\:pt-8{
     padding-top: 2rem;
+  }
+  .md\:pt-\[90px\]{
+    padding-top: 90px;
   }
   .md\:pb-0{
     padding-bottom: 0px;
@@ -12709,6 +12811,9 @@ select{
   .lg\:grid-cols-5{
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
+  .lg\:gap-10{
+    gap: 2.5rem;
+  }
   .lg\:gap-3{
     gap: 0.75rem;
   }
@@ -12721,6 +12826,14 @@ select{
   .lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+  .lg\:py-5{
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+  .lg\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
   .lg\:py-3{
     padding-top: 0.75rem;
