--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10285,6 +10285,11 @@ select{
   margin-right: auto;
 }
 
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-5{
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
@@ -10692,6 +10697,10 @@ select{
   width: 66.666667%;
 }
 
+.w-4\/5{
+  width: 80%;
+}
+
 .w-1\/3{
   width: 33.333333%;
 }
@@ -11057,14 +11066,14 @@ select{
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
-.border-slate-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(226 232 240 / var(--tw-border-opacity));
-}
-
 .border-red-500{
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.border-slate-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
 .border-green-600{
@@ -12540,6 +12549,9 @@ select{
   }
   .sm\:w-3\/4{
     width: 75%;
+  }
+  .sm\:w-5\/6{
+    width: 83.333333%;
   }
   .sm\:max-w-md{
     max-width: 28rem;
